@@ -17,18 +17,6 @@
  * limitations under the License.
  */
 
-#include<stdio.h>
-#include<string.h>
-#include<dirent.h>
-#include<sys/stat.h>
-#include<errno.h>
-#include<fcntl.h>
-#include<sys/sendfile.h>
-#include<sqlite3.h>
-
-#include "dbbasic.h" /* Database Functions */
-#include "dbinit.h"
-#include "dbkey.h"
 
 /* Database Functions Required:
  * int close_db(void);
@@ -37,15 +25,11 @@
  * const char* get_data(sqlite3_stmt *stmt);
  */
 
-#define EXPORT_SUCCESS 0
-#define EXPORT_FAIL 1
-#define EXPORT_COPY_SUCCESS 0
-#define EXPORT_COPY_FAIL 1
 
 /* export: Exports a tag in kwest as Directory-file structure on File System
  * param: char *tag - Tag name in Kwest
  * param: char *path - Absolute Path of Location where tag is to be exported
- * return: EXPORT_SUCCESS on SUCCESS
+ * return: KW_SUCCESS on SUCCESS
  * author: @SG
  */
 int export(const char *tag,const char *path);
